yacc_syntax.output
Nonterminals useless in grammar

   CastExpression
   UnaryExpressionNotPlusMinus


Terminals unused in grammar

   EQUALS_GREATER
   COLON
   OVERRIDE
   TILDA
   AND_THEN
   CARET
   LOWER_THAN_LPAREN


Rules useless in grammar

  274 CastExpression: LPAREN Type RPAREN UnaryExpression
  275               | LPAREN IDENTIFIER RPAREN UnaryExpressionNotPlusMinus

  276 UnaryExpressionNotPlusMinus: PostfixExpression
  277                            | TILDA UnaryExpression
  278                            | UnaryExpression
  279                            | CastExpression


Rules useless in parser due to conflicts

   60 FieldModifiers: /* empty */

  120 VariableInitializer: Expression
  121                    | ArrayInitializer


State 3 conflicts: 1 shift/reduce
State 8 conflicts: 5 shift/reduce, 6 reduce/reduce
State 15 conflicts: 2 reduce/reduce
State 19 conflicts: 2 reduce/reduce
State 21 conflicts: 4 shift/reduce, 2 reduce/reduce
State 58 conflicts: 4 shift/reduce, 4 reduce/reduce
State 63 conflicts: 6 shift/reduce, 8 reduce/reduce
State 69 conflicts: 1 reduce/reduce
State 70 conflicts: 2 shift/reduce
State 79 conflicts: 6 reduce/reduce
State 80 conflicts: 6 reduce/reduce
State 81 conflicts: 6 reduce/reduce
State 82 conflicts: 6 reduce/reduce
State 83 conflicts: 6 reduce/reduce
State 84 conflicts: 6 shift/reduce, 6 reduce/reduce
State 109 conflicts: 27 shift/reduce
State 149 conflicts: 1 reduce/reduce
State 158 conflicts: 27 shift/reduce
State 160 conflicts: 1 reduce/reduce
State 161 conflicts: 1 shift/reduce
State 189 conflicts: 1 reduce/reduce
State 202 conflicts: 1 reduce/reduce
State 204 conflicts: 1 shift/reduce
State 213 conflicts: 1 shift/reduce
State 221 conflicts: 2 reduce/reduce
State 232 conflicts: 1 reduce/reduce
State 234 conflicts: 1 reduce/reduce
State 297 conflicts: 2 shift/reduce
State 304 conflicts: 9 reduce/reduce
State 305 conflicts: 9 reduce/reduce
State 314 conflicts: 1 shift/reduce
State 361 conflicts: 17 shift/reduce
State 374 conflicts: 27 shift/reduce
State 383 conflicts: 1 shift/reduce
State 384 conflicts: 1 shift/reduce


Grammar

    0 $accept: CompilationUnit $end

    1 CompilationUnit: PackageDeclaration ImportDeclarations TypeDeclarations

    2 PackageDeclaration: /* empty */
    3                   | PACKAGE PackageName SEPARATOR

    4 ImportDeclarations: /* empty */
    5                   | ImportDeclaration
    6                   | ImportDeclarations ImportDeclaration

    7 ImportDeclaration: IMPORT TypeName SEPARATOR
    8                  | IMPORT PackageName DOT ASTERISK SEPARATOR

    9 TypeDeclarations: /* empty */
   10                 | TypeDeclaration
   11                 | TypeDeclarations TypeDeclaration

   12 TypeDeclaration: ClassDeclaration
   13                | InterfaceDeclaration
   14                | SEPARATOR

   15 ClassDeclaration: ClassModifiers CLASS IDENTIFIER Super Interfaces ClassBody

   16 ClassModifiers: /* empty */
   17               | ClassModifier
   18               | ClassModifiers ClassModifier

   19 ClassModifier: PUBLIC
   20              | PRIVATE
   21              | ABSTRACT
   22              | FINAL

   23 Super: /* empty */
   24      | EXTENDS ClassType

   25 Interfaces: /* empty */
   26           | IMPLEMENTS InterfaceTypeList

   27 InterfaceTypeList: InterfaceType
   28                  | InterfaceTypeList COMMA InterfaceType

   29 ClassBody: LCURL ClassBodyDeclarations RCURL

   30 ClassBodyDeclarations: /* empty */
   31                      | ClassBodyDeclaration
   32                      | ClassBodyDeclarations ClassBodyDeclaration

   33 ClassBodyDeclaration: ClassMemberDeclaration
   34                     | StaticInitializer
   35                     | ConstructorDeclaration

   36 ClassMemberDeclaration: FieldDeclaration
   37                       | MethodDeclaration

   38 StaticInitializer: STATIC Block

   39 ConstructorDeclaration: ConstructorModifiers ConstructorDeclarator Throws ConstructorBody

   40 ConstructorModifiers: /* empty */
   41                     | ConstructorModifier
   42                     | ConstructorModifiers ConstructorModifier

   43 ConstructorModifier: PUBLIC
   44                    | PROTECTED
   45                    | PRIVATE

   46 ConstructorDeclarator: IDENTIFIER LPAREN FormalParameterList RPAREN

   47 FormalParameterList: /* empty */
   48                    | FormalParameter
   49                    | FormalParameterList FormalParameter

   50 FormalParameter: Type VariableDeclaratorId

   51 Throws: /* empty */
   52       | THROWS ClassTypeList

   53 ClassTypeList: ClassType
   54              | ClassTypeList COMMA ClassType

   55 ConstructorBody: LCURL ExplicitConstructorInvocation BlockStatements RCURL

   56 ExplicitConstructorInvocation: /* empty */
   57                              | THIS LPAREN ArgumentList RPAREN
   58                              | SUPER LPAREN ArgumentList RPAREN

   59 FieldDeclaration: FieldModifiers Type VariableDeclarators SEPARATOR

   60 FieldModifiers: /* empty */
   61               | FieldModifier
   62               | FieldModifiers FieldModifier

   63 FieldModifier: PUBLIC
   64              | PROTECTED
   65              | PRIVATE
   66              | STATIC
   67              | FINAL

   68 VariableDeclarators: VariableDeclarator
   69                    | VariableDeclarators COMMA VariableDeclarator

   70 VariableDeclarator: VariableDeclaratorId
   71                   | VariableDeclaratorId EQUALS VariableInitializer

   72 VariableDeclaratorId: IDENTIFIER
   73                     | VariableDeclaratorId LBRACKET RBRACKET

   74 VariableInitializer: Expression
   75                    | ArrayInitializer

   76 MethodDeclaration: MethodHeader MethodBody

   77 MethodHeader: MethodModifiers ResultType MethodDeclarator Throws

   78 ResultType: Type
   79           | VOID

   80 MethodModifiers: /* empty */
   81                | MethodModifier
   82                | MethodModifiers MethodModifier

   83 MethodModifier: PUBLIC
   84               | PROTECTED
   85               | PRIVATE
   86               | STATIC
   87               | ABSTRACT
   88               | FINAL

   89 MethodDeclarator: IDENTIFIER LPAREN FormalParameterList RPAREN

   90 MethodBody: Block
   91           | SEPARATOR

   92 InterfaceDeclaration: InterfaceModifiers INTERFACE IDENTIFIER ExtendsInterfaces InterfaceBody

   93 InterfaceModifiers: /* empty */
   94                   | InterfaceModifier
   95                   | InterfaceModifiers InterfaceModifier

   96 InterfaceModifier: PUBLIC
   97                  | ABSTRACT

   98 ExtendsInterfaces: EXTENDS InterfaceType
   99                  | ExtendsInterfaces COMMA InterfaceType

  100 InterfaceBody: LCURL InterfaceMemberDeclarations RCURL

  101 InterfaceMemberDeclarations: /* empty */
  102                            | InterfaceMemberDeclaration
  103                            | InterfaceMemberDeclarations InterfaceMemberDeclaration

  104 InterfaceMemberDeclaration: ConstantDeclaration
  105                           | AbstractMethodDeclaration

  106 ConstantDeclaration: ConstantModifiers Type VariableDeclarator

  107 ConstantModifiers: PUBLIC
  108                  | STATIC
  109                  | FINAL

  110 AbstractMethodDeclaration: AbstractMethodModifiers ResultType MethodDeclarator Throws SEPARATOR

  111 AbstractMethodModifiers: /* empty */
  112                        | AbstractMethodModifier
  113                        | AbstractMethodModifiers AbstractMethodModifier

  114 AbstractMethodModifier: PUBLIC
  115                       | ABSTRACT

  116 ArrayInitializer: LCURL VariableInitializers RCURL

  117 VariableInitializers: /* empty */
  118                     | VariableInitializer
  119                     | VariableInitializers COMMA VariableInitializer

  120 VariableInitializer: Expression
  121                    | ArrayInitializer

  122 Type: IDENTIFIER
  123     | ArrayType

  124 ArrayType: Type LBRACKET RBRACKET

  125 TypeName: IDENTIFIER
  126         | PackageName DOT IDENTIFIER

  127 ClassType: TypeName

  128 InterfaceType: TypeName

  129 PackageName: IDENTIFIER
  130            | PackageName DOT IDENTIFIER

  131 Block: LPAREN BlockStatements RPAREN

  132 BlockOrStatement: Block
  133                 | Statement

  134 BlockStatements: /* empty */
  135                | BlockStatement
  136                | BlockStatements BlockStatement

  137 BlockStatement: LocalVariableDeclaration SEPARATOR
  138               | Statement

  139 LocalVariableDeclaration: Type VariableDeclarators

  140 EmptyStatement: SEPARATOR

  141 ExpressionStatement: StatementExpression SEPARATOR

  142 StatementExpression: Assignment
  143                    | Expression
  144                    | MethodInvocation
  145                    | ClassInstanceCreationExpression

  146 IfElseStatement: IF LPAREN Expression RPAREN Statement
  147                | IF LPAREN Expression RPAREN Statement ELSE Statement

  148 WhileStatement: WHILE LPAREN Expression RPAREN Statement

  149 DoWhileStatement: DO Statement WHILE LPAREN Expression RPAREN

  150 ForCondition: Expression SEPARATOR Expression SEPARATOR Expression
  151             | Expression SEPARATOR Expression SEPARATOR
  152             | Expression SEPARATOR SEPARATOR
  153             | Expression SEPARATOR SEPARATOR Expression
  154             | SEPARATOR Expression SEPARATOR Expression
  155             | SEPARATOR Expression SEPARATOR
  156             | SEPARATOR SEPARATOR Expression
  157             | SEPARATOR SEPARATOR

  158 ForStatement: FOR LPAREN ForCondition RPAREN Statement

  159 Statement: StatementWithoutTrailingSubstatement
  160          | IfElseStatement
  161          | WhileStatement
  162          | ForStatement
  163          | DoWhileStatement

  164 StatementWithoutTrailingSubstatement: Block
  165                                     | EmptyStatement
  166                                     | ExpressionStatement
  167                                     | BreakStatement
  168                                     | ContinueStatement
  169                                     | ReturnStatement
  170                                     | ThrowsStatements
  171                                     | TryStatement

  172 BreakStatement: BREAK IDENTIFIER SEPARATOR
  173               | BREAK SEPARATOR

  174 ContinueStatement: CONTINUE IDENTIFIER SEPARATOR
  175                  | CONTINUE SEPARATOR

  176 ReturnStatement: RETURN IDENTIFIER SEPARATOR
  177                | RETURN SEPARATOR

  178 ThrowsStatements: THROW Expression SEPARATOR

  179 TryStatement: TRY Block Catches
  180             | TRY Block Catches Finally
  181             | TRY Block Finally

  182 Catches: CatchClause
  183        | Catches CatchClause

  184 CatchClause: CATCH LPAREN FormalParameter RPAREN Block

  185 Finally: FINALLY Block

  186 ClassInstanceCreationExpression: NEW ClassType LPAREN ArgumentList RPAREN

  187 Assignment: LeftHandSide AssignmentOperator Expression

  188 ArgumentList: /* empty */
  189             | Expression
  190             | ArgumentList COMMA Expression

  191 Expression: UnaryExpression
  192           | Expression ASTERISK Expression
  193           | Expression SLASH Expression
  194           | Expression BACKSLASH Expression
  195           | Expression PLUS Expression
  196           | Expression MINUS Expression
  197           | Expression LESS_LESS Expression
  198           | Expression GREATER_GREATER Expression
  199           | Expression LESS Expression
  200           | Expression LESS_EQUALS Expression
  201           | Expression GREATER Expression
  202           | Expression GREATER_EQUALS Expression
  203           | Assignment
  204           | Expression SLASH_EQUALS Expression
  205           | Expression AND Expression
  206           | Expression AMPERSAND Expression
  207           | Expression XOR Expression
  208           | Expression OR Expression
  209           | Expression VERTICAL Expression

  210 UnaryExpression: PostfixExpression
  211                | NOT UnaryExpression
  212                | PLUS UnaryExpression
  213                | MINUS UnaryExpression
  214                | PLUS_PLUS UnaryExpression
  215                | MINUS_MINUS UnaryExpression

  216 PostfixExpression: PrimaryExpression
  217                  | PostfixExpression DOT PrimaryExpression
  218                  | PostfixExpression LPAREN RPAREN
  219                  | PostfixExpression LPAREN BlockOrStatement RPAREN
  220                  | PostfixExpression PLUS_PLUS
  221                  | PostfixExpression MINUS_MINUS

  222 PrimaryExpression: LPAREN BlockOrStatement RPAREN
  223                  | Literal
  224                  | NEW IDENTIFIER
  225                  | THIS
  226                  | SUPER

  227 LeftHandSide: ExpressionName
  228             | FieldAccess
  229             | ArrayAccess

  230 AssignmentOperator: EQUALS
  231                   | ASTERISK EQUALS
  232                   | BACKSLASH EQUALS
  233                   | SLASH_EQUALS
  234                   | PLUS EQUALS
  235                   | MINUS EQUALS
  236                   | LESS_LESS EQUALS
  237                   | MORE_MORE EQUALS
  238                   | AMPERSAND EQUALS
  239                   | VERTICAL EQUALS

  240 MethodInvocation: MethodName LPAREN ArgumentList RPAREN
  241                 | Primary DOT IDENTIFIER LPAREN ArgumentList RPAREN
  242                 | SUPER DOT IDENTIFIER LPAREN ArgumentList RPAREN

  243 FieldAccess: Primary DOT IDENTIFIER
  244            | SUPER DOT IDENTIFIER

  245 Primary: Literal
  246        | THIS
  247        | LPAREN Expression RPAREN
  248        | ClassInstanceCreationExpression
  249        | FieldAccess
  250        | MethodInvocation
  251        | ArrayAccess
  252        | NEW Type DimExprs Dims

  253 DimExprs: DimExpr
  254         | DimExprs DimExprs

  255 DimExpr: LBRACKET Expression RBRACKET

  256 Dims: /* empty */
  257     | LBRACKET RBRACKET
  258     | Dims LBRACKET RBRACKET

  259 ArrayAccess: ExpressionName LBRACKET Expression RBRACKET
  260            | Primary LBRACKET Expression RBRACKET

  261 ExpressionName: IDENTIFIER
  262               | AmbiguousName DOT IDENTIFIER

  263 MethodName: ExpressionName

  264 AmbiguousName: IDENTIFIER
  265              | AmbiguousName DOT IDENTIFIER

  266 Literal: BooleanLiteral
  267        | INTEGER_LITERAL
  268        | REAL_LITERAL
  269        | CHAR_LITERAL
  270        | STRING_LITERAL
  271        | NULL_

  272 BooleanLiteral: TRUE
  273               | FALSE


Terminals, with rules where they appear

$end (0) 0
error (256)
IMPORT (258) 7 8
IF (259) 146 147
ELSE (260) 147
WHILE (261) 148 149
BREAK (262) 172 173
RETURN (263) 176 177
ABSTRACT (264) 21 87 97 115
FINAL (265) 22 67 88 109
NEW (266) 186 224 252
TRUE (267) 272
FALSE (268) 273
IDENTIFIER (269) 15 46 72 89 92 122 125 126 129 130 172 174 176 224
    241 242 243 244 261 262 264 265
INTEGER_LITERAL (270) 267
REAL_LITERAL (271) 268
CHAR_LITERAL (272) 269
STRING_LITERAL (273) 270
SEPARATOR (274) 3 7 8 14 59 91 110 137 140 141 150 151 152 153 154
    155 156 157 172 173 174 175 176 177 178
PLUS_PLUS (275) 214 220
MINUS_MINUS (276) 215 221
SLASH_EQUALS (277) 204 233
LESS_LESS (278) 197 236
LESS_EQUALS (279) 200
EQUALS_GREATER (280)
GREATER_EQUALS (281) 202
GREATER_GREATER (282) 198
AMPERSAND (283) 206 238
ASTERISK (284) 8 192 231
PLUS (285) 195 212 234
LPAREN (286) 46 57 58 89 131 146 147 148 149 158 184 186 218 219 222
    240 241 242 247
RPAREN (287) 46 57 58 89 131 146 147 148 149 158 184 186 218 219 222
    240 241 242 247
COMMA (288) 28 54 69 99 119 190
MINUS (289) 196 213 235
DOT (290) 8 126 130 217 241 242 243 244 262 265
SLASH (291) 193
COLON (292)
LESS (293) 199
EQUALS (294) 71 230 231 232 234 235 236 237 238 239
GREATER (295) 201
LBRACKET (296) 73 124 255 257 258 259 260
BACKSLASH (297) 194 232
RBRACKET (298) 73 124 255 257 258 259 260
VERTICAL (299) 209 239
THIS (300) 57 225 246
SUPER (301) 58 226 242 244
STATIC (302) 38 66 86 108
OVERRIDE (303)
DO (304) 149
FOR (305) 158
LCURL (306) 29 55 100 116
RCURL (307) 29 55 100 116
NOT (308) 211
PRIVATE (309) 20 45 65 85
PROTECTED (310) 44 64 84
PUBLIC (311) 19 43 63 83 96 107 114
VOID (312) 79
CONTINUE (313) 174 175
MORE_MORE (314) 237
CLASS (315) 15
CATCH (316) 184
EXTENDS (317) 24 98
FINALLY (318) 185
IMPLEMENTS (319) 26
INTERFACE (320) 92
NULL_ (321) 271
PACKAGE (322) 3
THROW (323) 178
THROWS (324) 52
TILDA (325)
TRY (326) 179 180 181
NELSE (327)
AND_THEN (328)
OR (329) 208
CARET (330)
XOR (331) 207
AND (332) 205
LOWER_THAN_LPAREN (333)


Nonterminals, with rules where they appear

$accept (79)
    on left: 0
CompilationUnit (80)
    on left: 1, on right: 0
PackageDeclaration (81)
    on left: 2 3, on right: 1
ImportDeclarations (82)
    on left: 4 5 6, on right: 1 6
ImportDeclaration (83)
    on left: 7 8, on right: 5 6
TypeDeclarations (84)
    on left: 9 10 11, on right: 1 11
TypeDeclaration (85)
    on left: 12 13 14, on right: 10 11
ClassDeclaration (86)
    on left: 15, on right: 12
ClassModifiers (87)
    on left: 16 17 18, on right: 15 18
ClassModifier (88)
    on left: 19 20 21 22, on right: 17 18
Super (89)
    on left: 23 24, on right: 15
Interfaces (90)
    on left: 25 26, on right: 15
InterfaceTypeList (91)
    on left: 27 28, on right: 26 28
ClassBody (92)
    on left: 29, on right: 15
ClassBodyDeclarations (93)
    on left: 30 31 32, on right: 29 32
ClassBodyDeclaration (94)
    on left: 33 34 35, on right: 31 32
ClassMemberDeclaration (95)
    on left: 36 37, on right: 33
StaticInitializer (96)
    on left: 38, on right: 34
ConstructorDeclaration (97)
    on left: 39, on right: 35
ConstructorModifiers (98)
    on left: 40 41 42, on right: 39 42
ConstructorModifier (99)
    on left: 43 44 45, on right: 41 42
ConstructorDeclarator (100)
    on left: 46, on right: 39
FormalParameterList (101)
    on left: 47 48 49, on right: 46 49 89
FormalParameter (102)
    on left: 50, on right: 48 49 184
Throws (103)
    on left: 51 52, on right: 39 77 110
ClassTypeList (104)
    on left: 53 54, on right: 52 54
ConstructorBody (105)
    on left: 55, on right: 39
ExplicitConstructorInvocation (106)
    on left: 56 57 58, on right: 55
FieldDeclaration (107)
    on left: 59, on right: 36
FieldModifiers (108)
    on left: 60 61 62, on right: 59 62
FieldModifier (109)
    on left: 63 64 65 66 67, on right: 61 62
VariableDeclarators (110)
    on left: 68 69, on right: 59 69 139
VariableDeclarator (111)
    on left: 70 71, on right: 68 69 106
VariableDeclaratorId (112)
    on left: 72 73, on right: 50 70 71 73
VariableInitializer (113)
    on left: 74 75 120 121, on right: 71 118 119
MethodDeclaration (114)
    on left: 76, on right: 37
MethodHeader (115)
    on left: 77, on right: 76
ResultType (116)
    on left: 78 79, on right: 77 110
MethodModifiers (117)
    on left: 80 81 82, on right: 77 82
MethodModifier (118)
    on left: 83 84 85 86 87 88, on right: 81 82
MethodDeclarator (119)
    on left: 89, on right: 77 110
MethodBody (120)
    on left: 90 91, on right: 76
InterfaceDeclaration (121)
    on left: 92, on right: 13
InterfaceModifiers (122)
    on left: 93 94 95, on right: 92 95
InterfaceModifier (123)
    on left: 96 97, on right: 94 95
ExtendsInterfaces (124)
    on left: 98 99, on right: 92 99
InterfaceBody (125)
    on left: 100, on right: 92
InterfaceMemberDeclarations (126)
    on left: 101 102 103, on right: 100 103
InterfaceMemberDeclaration (127)
    on left: 104 105, on right: 102 103
ConstantDeclaration (128)
    on left: 106, on right: 104
ConstantModifiers (129)
    on left: 107 108 109, on right: 106
AbstractMethodDeclaration (130)
    on left: 110, on right: 105
AbstractMethodModifiers (131)
    on left: 111 112 113, on right: 110 113
AbstractMethodModifier (132)
    on left: 114 115, on right: 112 113
ArrayInitializer (133)
    on left: 116, on right: 75 121
VariableInitializers (134)
    on left: 117 118 119, on right: 116 119
Type (135)
    on left: 122 123, on right: 50 59 78 106 124 139 252
ArrayType (136)
    on left: 124, on right: 123
TypeName (137)
    on left: 125 126, on right: 7 127 128
ClassType (138)
    on left: 127, on right: 24 53 54 186
InterfaceType (139)
    on left: 128, on right: 27 28 98 99
PackageName (140)
    on left: 129 130, on right: 3 8 126 130
Block (141)
    on left: 131, on right: 38 90 132 164 179 180 181 184 185
BlockOrStatement (142)
    on left: 132 133, on right: 219 222
BlockStatements (143)
    on left: 134 135 136, on right: 55 131 136
BlockStatement (144)
    on left: 137 138, on right: 135 136
LocalVariableDeclaration (145)
    on left: 139, on right: 137
EmptyStatement (146)
    on left: 140, on right: 165
ExpressionStatement (147)
    on left: 141, on right: 166
StatementExpression (148)
    on left: 142 143 144 145, on right: 141
IfElseStatement (149)
    on left: 146 147, on right: 160
WhileStatement (150)
    on left: 148, on right: 161
DoWhileStatement (151)
    on left: 149, on right: 163
ForCondition (152)
    on left: 150 151 152 153 154 155 156 157, on right: 158
ForStatement (153)
    on left: 158, on right: 162
Statement (154)
    on left: 159 160 161 162 163, on right: 133 138 146 147 148 149
    158
StatementWithoutTrailingSubstatement (155)
    on left: 164 165 166 167 168 169 170 171, on right: 159
BreakStatement (156)
    on left: 172 173, on right: 167
ContinueStatement (157)
    on left: 174 175, on right: 168
ReturnStatement (158)
    on left: 176 177, on right: 169
ThrowsStatements (159)
    on left: 178, on right: 170
TryStatement (160)
    on left: 179 180 181, on right: 171
Catches (161)
    on left: 182 183, on right: 179 180 183
CatchClause (162)
    on left: 184, on right: 182 183
Finally (163)
    on left: 185, on right: 180 181
ClassInstanceCreationExpression (164)
    on left: 186, on right: 145 248
Assignment (165)
    on left: 187, on right: 142 203
ArgumentList (166)
    on left: 188 189 190, on right: 57 58 186 190 240 241 242
Expression (167)
    on left: 191 192 193 194 195 196 197 198 199 200 201 202 203 204
    205 206 207 208 209, on right: 74 120 143 146 147 148 149 150 151
    152 153 154 155 156 178 187 189 190 192 193 194 195 196 197 198
    199 200 201 202 204 205 206 207 208 209 247 255 259 260
UnaryExpression (168)
    on left: 210 211 212 213 214 215, on right: 191 211 212 213 214
    215
PostfixExpression (169)
    on left: 216 217 218 219 220 221, on right: 210 217 218 219 220
    221
PrimaryExpression (170)
    on left: 222 223 224 225 226, on right: 216 217
LeftHandSide (171)
    on left: 227 228 229, on right: 187
AssignmentOperator (172)
    on left: 230 231 232 233 234 235 236 237 238 239, on right: 187
MethodInvocation (173)
    on left: 240 241 242, on right: 144 250
FieldAccess (174)
    on left: 243 244, on right: 228 249
Primary (175)
    on left: 245 246 247 248 249 250 251 252, on right: 241 243 260
DimExprs (176)
    on left: 253 254, on right: 252 254
DimExpr (177)
    on left: 255, on right: 253
Dims (178)
    on left: 256 257 258, on right: 252 258
ArrayAccess (179)
    on left: 259 260, on right: 229 251
ExpressionName (180)
    on left: 261 262, on right: 227 259 263
MethodName (181)
    on left: 263, on right: 240
AmbiguousName (182)
    on left: 264 265, on right: 262 265
Literal (183)
    on left: 266 267 268 269 270 271, on right: 223 245
BooleanLiteral (184)
    on left: 272 273, on right: 266


State 0

    0 $accept: . CompilationUnit $end

    PACKAGE  shift, and go to state 1

    $default  reduce using rule 2 (PackageDeclaration)

    CompilationUnit     go to state 2
    PackageDeclaration  go to state 3


State 1

    3 PackageDeclaration: PACKAGE . PackageName SEPARATOR

    IDENTIFIER  shift, and go to state 4

    PackageName  go to state 5


State 2

    0 $accept: CompilationUnit . $end

    $end  shift, and go to state 6


State 3

    1 CompilationUnit: PackageDeclaration . ImportDeclarations TypeDeclarations

    IMPORT  shift, and go to state 7

    IMPORT    [reduce using rule 4 (ImportDeclarations)]
    $default  reduce using rule 4 (ImportDeclarations)

    ImportDeclarations  go to state 8
    ImportDeclaration   go to state 9


State 4

  129 PackageName: IDENTIFIER .

    $default  reduce using rule 129 (PackageName)


State 5

    3 PackageDeclaration: PACKAGE PackageName . SEPARATOR
  130 PackageName: PackageName . DOT IDENTIFIER

    SEPARATOR  shift, and go to state 10
    DOT        shift, and go to state 11


State 6

    0 $accept: CompilationUnit $end .

    $default  accept


State 7

    7 ImportDeclaration: IMPORT . TypeName SEPARATOR
    8                  | IMPORT . PackageName DOT ASTERISK SEPARATOR

    IDENTIFIER  shift, and go to state 12

    TypeName     go to state 13
    PackageName  go to state 14


State 8

    1 CompilationUnit: PackageDeclaration ImportDeclarations . TypeDeclarations
    6 ImportDeclarations: ImportDeclarations . ImportDeclaration

    IMPORT     shift, and go to state 7
    ABSTRACT   shift, and go to state 15
    FINAL      shift, and go to state 16
    SEPARATOR  shift, and go to state 17
    PRIVATE    shift, and go to state 18
    PUBLIC     shift, and go to state 19

    ABSTRACT   [reduce using rule 9 (TypeDeclarations)]
    ABSTRACT   [reduce using rule 16 (ClassModifiers)]
    ABSTRACT   [reduce using rule 93 (InterfaceModifiers)]
    FINAL      [reduce using rule 9 (TypeDeclarations)]
    FINAL      [reduce using rule 16 (ClassModifiers)]
    SEPARATOR  [reduce using rule 9 (TypeDeclarations)]
    PRIVATE    [reduce using rule 9 (TypeDeclarations)]
    PRIVATE    [reduce using rule 16 (ClassModifiers)]
    PUBLIC     [reduce using rule 9 (TypeDeclarations)]
    PUBLIC     [reduce using rule 16 (ClassModifiers)]
    PUBLIC     [reduce using rule 93 (InterfaceModifiers)]
    CLASS      reduce using rule 9 (TypeDeclarations)
    CLASS      [reduce using rule 16 (ClassModifiers)]
    INTERFACE  reduce using rule 9 (TypeDeclarations)
    INTERFACE  [reduce using rule 93 (InterfaceModifiers)]
    $default   reduce using rule 9 (TypeDeclarations)

    ImportDeclaration     go to state 20
    TypeDeclarations      go to state 21
    TypeDeclaration       go to state 22
    ClassDeclaration      go to state 23
    ClassModifiers        go to state 24
    ClassModifier         go to state 25
    InterfaceDeclaration  go to state 26
    InterfaceModifiers    go to state 27
    InterfaceModifier     go to state 28


State 9

    5 ImportDeclarations: ImportDeclaration .

    $default  reduce using rule 5 (ImportDeclarations)


State 10

    3 PackageDeclaration: PACKAGE PackageName SEPARATOR .

    $default  reduce using rule 3 (PackageDeclaration)


State 11

  130 PackageName: PackageName DOT . IDENTIFIER

    IDENTIFIER  shift, and go to state 29


State 12

  125 TypeName: IDENTIFIER .
  129 PackageName: IDENTIFIER .

    DOT       reduce using rule 129 (PackageName)
    $default  reduce using rule 125 (TypeName)


State 13

    7 ImportDeclaration: IMPORT TypeName . SEPARATOR

    SEPARATOR  shift, and go to state 30


State 14

    8 ImportDeclaration: IMPORT PackageName . DOT ASTERISK SEPARATOR
  126 TypeName: PackageName . DOT IDENTIFIER
  130 PackageName: PackageName . DOT IDENTIFIER

    DOT  shift, and go to state 31


State 15

   21 ClassModifier: ABSTRACT .
   97 InterfaceModifier: ABSTRACT .

    ABSTRACT   reduce using rule 21 (ClassModifier)
    ABSTRACT   [reduce using rule 97 (InterfaceModifier)]
    PUBLIC     reduce using rule 21 (ClassModifier)
    PUBLIC     [reduce using rule 97 (InterfaceModifier)]
    INTERFACE  reduce using rule 97 (InterfaceModifier)
    $default   reduce using rule 21 (ClassModifier)


State 16

   22 ClassModifier: FINAL .

    $default  reduce using rule 22 (ClassModifier)


State 17

   14 TypeDeclaration: SEPARATOR .

    $default  reduce using rule 14 (TypeDeclaration)


State 18

   20 ClassModifier: PRIVATE .

    $default  reduce using rule 20 (ClassModifier)


State 19

   19 ClassModifier: PUBLIC .
   96 InterfaceModifier: PUBLIC .

    ABSTRACT   reduce using rule 19 (ClassModifier)
    ABSTRACT   [reduce using rule 96 (InterfaceModifier)]
    PUBLIC     reduce using rule 19 (ClassModifier)
    PUBLIC     [reduce using rule 96 (InterfaceModifier)]
    INTERFACE  reduce using rule 96 (InterfaceModifier)
    $default   reduce using rule 19 (ClassModifier)


State 20

    6 ImportDeclarations: ImportDeclarations ImportDeclaration .

    $default  reduce using rule 6 (ImportDeclarations)


State 21

    1 CompilationUnit: PackageDeclaration ImportDeclarations TypeDeclarations .
   11 TypeDeclarations: TypeDeclarations . TypeDeclaration

    ABSTRACT   shift, and go to state 15
    FINAL      shift, and go to state 16
    SEPARATOR  shift, and go to state 17
    PRIVATE    shift, and go to state 18
    PUBLIC     shift, and go to state 19

    ABSTRACT   [reduce using rule 16 (ClassModifiers)]
    ABSTRACT   [reduce using rule 93 (InterfaceModifiers)]
    FINAL      [reduce using rule 16 (ClassModifiers)]
    PRIVATE    [reduce using rule 16 (ClassModifiers)]
    PUBLIC     [reduce using rule 16 (ClassModifiers)]
    PUBLIC     [reduce using rule 93 (InterfaceModifiers)]
    CLASS      reduce using rule 16 (ClassModifiers)
    INTERFACE  reduce using rule 93 (InterfaceModifiers)
    $default   reduce using rule 1 (CompilationUnit)

    TypeDeclaration       go to state 32
    ClassDeclaration      go to state 23
    ClassModifiers        go to state 24
    ClassModifier         go to state 25
    InterfaceDeclaration  go to state 26
    InterfaceModifiers    go to state 27
    InterfaceModifier     go to state 28


State 22

   10 TypeDeclarations: TypeDeclaration .

    $default  reduce using rule 10 (TypeDeclarations)


State 23

   12 TypeDeclaration: ClassDeclaration .

    $default  reduce using rule 12 (TypeDeclaration)


State 24

   15 ClassDeclaration: ClassModifiers . CLASS IDENTIFIER Super Interfaces ClassBody
   18 ClassModifiers: ClassModifiers . ClassModifier

    ABSTRACT  shift, and go to state 33
    FINAL     shift, and go to state 16
    PRIVATE   shift, and go to state 18
    PUBLIC    shift, and go to state 34
    CLASS     shift, and go to state 35

    ClassModifier  go to state 36


State 25

   17 ClassModifiers: ClassModifier .

    $default  reduce using rule 17 (ClassModifiers)


State 26

   13 TypeDeclaration: InterfaceDeclaration .

    $default  reduce using rule 13 (TypeDeclaration)


State 27

   92 InterfaceDeclaration: InterfaceModifiers . INTERFACE IDENTIFIER ExtendsInterfaces InterfaceBody
   95 InterfaceModifiers: InterfaceModifiers . InterfaceModifier

    ABSTRACT   shift, and go to state 37
    PUBLIC     shift, and go to state 38
    INTERFACE  shift, and go to state 39

    InterfaceModifier  go to state 40


State 28

   94 InterfaceModifiers: InterfaceModifier .

    $default  reduce using rule 94 (InterfaceModifiers)


State 29

  130 PackageName: PackageName DOT IDENTIFIER .

    $default  reduce using rule 130 (PackageName)


State 30

    7 ImportDeclaration: IMPORT TypeName SEPARATOR .

    $default  reduce using rule 7 (ImportDeclaration)


State 31

    8 ImportDeclaration: IMPORT PackageName DOT . ASTERISK SEPARATOR
  126 TypeName: PackageName DOT . IDENTIFIER
  130 PackageName: PackageName DOT . IDENTIFIER

    IDENTIFIER  shift, and go to state 41
    ASTERISK    shift, and go to state 42


State 32

   11 TypeDeclarations: TypeDeclarations TypeDeclaration .

    $default  reduce using rule 11 (TypeDeclarations)


State 33

   21 ClassModifier: ABSTRACT .
